--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -136,32 +136,46 @@ body {
   width: 100%;
   border: solid 1px #59636B;
   border-radius: 5px;
-  padding: 5px 10px;
   height: 40px;
   overflow: hidden;
   transition: all 250ms ease-in-out;
+  position: relative;
+  padding: 0 10px 0 10px;
 }
 .nav-container .layers-wrap .layer-container:hover {
+  background-color: #353A3D;
+}
+.nav-container .layers-wrap .layer-container:hover h2 {
   background-color: #353A3D;
 }
 .nav-container .layers-wrap .layer-container.active {
   background-color: #353A3D;
   height: 50vh;
-  padding: 5px 10px 0 10px;
+  overflow: scroll;
+}
+.nav-container .layers-wrap .layer-container.active h2 {
+  background-color: #353A3D;
 }
 .nav-container .layers-wrap .layer-container h2 {
   font-family: "EB Garamond", serif;
   text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
   font-size: 20px;
   padding-bottom: 7px;
+  padding-top: 5px;
   cursor: pointer;
   border-bottom: solid 1px #59636B;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #26282A;
+  z-index: 20;
+  transition: all 250ms ease-in-out;
 }
 .nav-container .layers-wrap .layer-container ul {
-  overflow: scroll;
   height: -moz-fit-content;
   height: fit-content;
   padding-bottom: 20px;
@@ -304,6 +318,7 @@ body {
   border-radius: 5px;
   font-size: 13px;
   font-family: monospace;
+  pointer-events: none;
 }
 .node-popup .close-btn {
   position: absolute;
